--- a/Phising_Detection.ipynb
+++ b/Phising_Detection.ipynb
@@ -76,6 +76,13 @@
     "print(status_counts)\n",
     "print(f\"\\nEl dataset está balanceado: {'Sí' if balance_ratio == 1.0 else 'No'}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Derivación de características"
+   ]
   }
  ],
  "metadata": {
