--- a/Phising_Detection.ipynb
+++ b/Phising_Detection.ipynb
@@ -155,6 +155,297 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# En base a la respuesta anterior escriba al menos quince funciones basadas en los artículos, para derivar características que un modelo pueda utilizar y añada dichas características al dataset original. Incluya dentro de las quince funciones, la entropía de Shanon y relativa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>status</th>\n",
+       "      <th>url_length</th>\n",
+       "      <th>special_chars_count</th>\n",
+       "      <th>digits_count</th>\n",
+       "      <th>subdomains_count</th>\n",
+       "      <th>hyphens_count</th>\n",
+       "      <th>has_ip_address</th>\n",
+       "      <th>at_symbol_count</th>\n",
+       "      <th>double_slash_count</th>\n",
+       "      <th>suspicious_words_count</th>\n",
+       "      <th>suspicious_tld</th>\n",
+       "      <th>is_shortened</th>\n",
+       "      <th>parameters_count</th>\n",
+       "      <th>shannon_entropy</th>\n",
+       "      <th>relative_entropy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://www.crestonwood.com/router.php</td>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>37</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.787043</td>\n",
+       "      <td>0.726956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://shadetreetechnology.com/V4/validation/a...</td>\n",
+       "      <td>phishing</td>\n",
+       "      <td>77</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.419864</td>\n",
+       "      <td>0.705284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://support-appleld.com.secureupdate.duila...</td>\n",
+       "      <td>phishing</td>\n",
+       "      <td>126</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.753412</td>\n",
+       "      <td>0.681270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://rgipt.ac.in</td>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.461320</td>\n",
+       "      <td>0.830068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.iracing.com/tracks/gateway-motorspo...</td>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>55</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.097662</td>\n",
+       "      <td>0.708771</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 url      status  url_length  \\\n",
+       "0              http://www.crestonwood.com/router.php  legitimate          37   \n",
+       "1  http://shadetreetechnology.com/V4/validation/a...    phishing          77   \n",
+       "2  https://support-appleld.com.secureupdate.duila...    phishing         126   \n",
+       "3                                 http://rgipt.ac.in  legitimate          18   \n",
+       "4  http://www.iracing.com/tracks/gateway-motorspo...  legitimate          55   \n",
+       "\n",
+       "   special_chars_count  digits_count  subdomains_count  hyphens_count  \\\n",
+       "0                    7             0                 2              0   \n",
+       "1                    7            17                 1              0   \n",
+       "2                   19            19                 4              1   \n",
+       "3                    5             0                 2              0   \n",
+       "4                   10             0                 2              2   \n",
+       "\n",
+       "   has_ip_address  at_symbol_count  double_slash_count  \\\n",
+       "0               0                0                   1   \n",
+       "1               0                0                   1   \n",
+       "2               0                0                   1   \n",
+       "3               0                0                   1   \n",
+       "4               0                0                   1   \n",
+       "\n",
+       "   suspicious_words_count  suspicious_tld  is_shortened  parameters_count  \\\n",
+       "0                       0               0             0                 0   \n",
+       "1                       0               0             0                 0   \n",
+       "2                       2               0             0                 1   \n",
+       "3                       0               0             0                 0   \n",
+       "4                       0               0             0                 0   \n",
+       "\n",
+       "   shannon_entropy  relative_entropy  \n",
+       "0         3.787043          0.726956  \n",
+       "1         4.419864          0.705284  \n",
+       "2         4.753412          0.681270  \n",
+       "3         3.461320          0.830068  \n",
+       "4         4.097662          0.708771  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import math\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "\n",
+    "\n",
+    "def url_length(url):\n",
+    "    \"\"\"Devuelve la longitud de la URL.\"\"\"\n",
+    "    return len(url)\n",
+    "\n",
+    "def count_special_chars(url):\n",
+    "    \"\"\"Cuenta la cantidad de caracteres especiales en la URL.\"\"\"\n",
+    "    return len(re.findall(r'[^a-zA-Z0-9]', url))\n",
+    "\n",
+    "def count_digits(url):\n",
+    "    \"\"\"Cuenta la cantidad de dígitos en la URL.\"\"\"\n",
+    "    return len(re.findall(r'\\d', url))\n",
+    "\n",
+    "def count_subdomains(url):\n",
+    "    \"\"\"Cuenta la cantidad de subdominios en la URL.\"\"\"\n",
+    "    domain = urlparse(url).netloc\n",
+    "    return domain.count('.')\n",
+    "\n",
+    "def count_hyphens(url):\n",
+    "    \"\"\"Cuenta la cantidad de guiones en la URL.\"\"\"\n",
+    "    return url.count('-')\n",
+    "\n",
+    "def has_ip_address(url):\n",
+    "    \"\"\"Verifica si la URL contiene una dirección IP en lugar de un dominio.\"\"\"\n",
+    "    return int(bool(re.match(r'http[s]?://(?:[0-9]{1,3}\\.){3}[0-9]{1,3}', url)))\n",
+    "\n",
+    "def count_at_symbol(url):\n",
+    "    \"\"\"Cuenta el número de '@' en la URL.\"\"\"\n",
+    "    return url.count('@')\n",
+    "\n",
+    "def count_double_slash(url):\n",
+    "    \"\"\"Cuenta la cantidad de '//', lo que puede indicar una redirección sospechosa.\"\"\"\n",
+    "    return url.count('//')\n",
+    "\n",
+    "def count_suspicious_words(url):\n",
+    "    \"\"\"Cuenta la cantidad de palabras sospechosas en la URL.\"\"\"\n",
+    "    suspicious_words = ['secure', 'login', 'account', 'verify', 'banking', 'update', 'free', 'click', 'confirm']\n",
+    "    return sum(1 for word in suspicious_words if word in url.lower())\n",
+    "\n",
+    "def tld_suspicious(url):\n",
+    "    \"\"\"Verifica si el TLD está entre los considerados sospechosos.\"\"\"\n",
+    "    suspicious_tlds = ['.tk', '.cf', '.ga', '.ml', '.gq']\n",
+    "    parsed_url = urlparse(url)\n",
+    "    tld = parsed_url.netloc.split('.')[-1]\n",
+    "    return int(tld in suspicious_tlds)\n",
+    "\n",
+    "def is_shortened(url):\n",
+    "    \"\"\"Verifica si la URL usa un servicio de acortamiento.\"\"\"\n",
+    "    shorteners = ['bit.ly', 'tinyurl', 'goo.gl', 't.co', 'ow.ly', 'is.gd']\n",
+    "    domain = urlparse(url).netloc\n",
+    "    return int(domain in shorteners)\n",
+    "\n",
+    "def count_parameters(url):\n",
+    "    \"\"\"Cuenta la cantidad de parámetros en la URL.\"\"\"\n",
+    "    return url.count('?')\n",
+    "\n",
+    "def shannon_entropy(url):\n",
+    "    \"\"\"Calcula la entropía de Shannon de la URL.\"\"\"\n",
+    "    freq = {char: url.count(char) / len(url) for char in set(url)}\n",
+    "    return -sum(f * math.log2(f) for f in freq.values())\n",
+    "\n",
+    "def relative_entropy(url):\n",
+    "    \"\"\"Calcula la entropía relativa (normalizada) de la URL.\"\"\"\n",
+    "    max_entropy = math.log2(len(url)) if len(url) > 0 else 1\n",
+    "    return shannon_entropy(url) / max_entropy\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Aplicar las funciones al dataset\n",
+    "df[\"url_length\"] = df[\"url\"].apply(url_length)\n",
+    "df[\"special_chars_count\"] = df[\"url\"].apply(count_special_chars)\n",
+    "df[\"digits_count\"] = df[\"url\"].apply(count_digits)\n",
+    "df[\"subdomains_count\"] = df[\"url\"].apply(count_subdomains)\n",
+    "df[\"hyphens_count\"] = df[\"url\"].apply(count_hyphens)\n",
+    "df[\"has_ip_address\"] = df[\"url\"].apply(has_ip_address)\n",
+    "df[\"at_symbol_count\"] = df[\"url\"].apply(count_at_symbol)\n",
+    "df[\"double_slash_count\"] = df[\"url\"].apply(count_double_slash)\n",
+    "df[\"suspicious_words_count\"] = df[\"url\"].apply(count_suspicious_words)\n",
+    "df[\"suspicious_tld\"] = df[\"url\"].apply(tld_suspicious)\n",
+    "df[\"is_shortened\"] = df[\"url\"].apply(is_shortened)\n",
+    "df[\"parameters_count\"] = df[\"url\"].apply(count_parameters)\n",
+    "df[\"shannon_entropy\"] = df[\"url\"].apply(shannon_entropy)\n",
+    "df[\"relative_entropy\"] = df[\"url\"].apply(relative_entropy)\n",
+    "\n",
+    "# Dataset con las características extraídas\n",
+    "df.to_csv(\"dataset_pishing_features.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "df.head()\n"
+   ]
   }
  ],
  "metadata": {
