--- a/Phising_Detection.ipynb
+++ b/Phising_Detection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,17 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "status\n",
       "legitimate    5715\n",
       "phishing      5715\n",
-      "Name: count, dtype: int64\n",
+      "Name: status, dtype: int64\n",
       "\n",
       "El dataset está balanceado: Sí\n"
      ]
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +343,7 @@
        "4         4.097662          0.708771  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,6 +444,105 @@
     "\n",
     "\n",
     "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocesamiento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   status  url_length  special_chars_count  digits_count  subdomains_count  \\\n",
+      "0       0          37                    7             0                 2   \n",
+      "1       1          77                    7            17                 1   \n",
+      "2       1         126                   19            19                 4   \n",
+      "3       0          18                    5             0                 2   \n",
+      "4       0          55                   10             0                 2   \n",
+      "\n",
+      "   hyphens_count  has_ip_address  at_symbol_count  double_slash_count  \\\n",
+      "0              0               0                0                   1   \n",
+      "1              0               0                0                   1   \n",
+      "2              1               0                0                   1   \n",
+      "3              0               0                0                   1   \n",
+      "4              2               0                0                   1   \n",
+      "\n",
+      "   suspicious_words_count  suspicious_tld  is_shortened  parameters_count  \\\n",
+      "0                       0               0             0                 0   \n",
+      "1                       0               0             0                 0   \n",
+      "2                       2               0             0                 1   \n",
+      "3                       0               0             0                 0   \n",
+      "4                       0               0             0                 0   \n",
+      "\n",
+      "   shannon_entropy  relative_entropy  \n",
+      "0         3.787043          0.726956  \n",
+      "1         4.419864          0.705284  \n",
+      "2         4.753412          0.681270  \n",
+      "3         3.461320          0.830068  \n",
+      "4         4.097662          0.708771  \n",
+      "\n",
+      "Información del dataset:\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11430 entries, 0 to 11429\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   status                  11430 non-null  int64  \n",
+      " 1   url_length              11430 non-null  int64  \n",
+      " 2   special_chars_count     11430 non-null  int64  \n",
+      " 3   digits_count            11430 non-null  int64  \n",
+      " 4   subdomains_count        11430 non-null  int64  \n",
+      " 5   hyphens_count           11430 non-null  int64  \n",
+      " 6   has_ip_address          11430 non-null  int64  \n",
+      " 7   at_symbol_count         11430 non-null  int64  \n",
+      " 8   double_slash_count      11430 non-null  int64  \n",
+      " 9   suspicious_words_count  11430 non-null  int64  \n",
+      " 10  suspicious_tld          11430 non-null  int64  \n",
+      " 11  is_shortened            11430 non-null  int64  \n",
+      " 12  parameters_count        11430 non-null  int64  \n",
+      " 13  shannon_entropy         11430 non-null  float64\n",
+      " 14  relative_entropy        11430 non-null  float64\n",
+      "dtypes: float64(2), int64(13)\n",
+      "memory usage: 1.3 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Convertir la variable categórica \"status\" en binaria\n",
+    "df[\"status\"] = df[\"status\"].map({\"legitimate\": 0, \"phishing\": 1})\n",
+    "\n",
+    "# Eliminar la columna del dominio si existe (ajustar el nombre si es diferente)\n",
+    "if \"url\" in df.columns:\n",
+    "    df = df.drop(columns=[\"url\"])\n",
+    "\n",
+    "# Manejo de valores nulos\n",
+    "df = df.dropna()  # Eliminar filas con valores nulos\n",
+    "\n",
+    "# Convertir otras variables categóricas a numéricas si hay más columnas categóricas\n",
+    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns\n",
+    "df = pd.get_dummies(df, columns=categorical_columns, drop_first=True)\n",
+    "\n",
+    "# Guardar el dataset limpio (opcional)\n",
+    "df.to_csv(\"dataset_limpio.csv\", index=False)\n",
+    "\n",
+    "# Mostrar un resumen de los datos procesados\n",
+    "print(df.head())\n",
+    "print(\"\\nInformación del dataset:\\n\")\n",
+    "print(df.info())\n"
    ]
   }
  ],
