--- a/Phising_Detection.ipynb
+++ b/Phising_Detection.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
     "# Convertir la variable categórica \"status\" en binaria\n",
     "df[\"status\"] = df[\"status\"].map({\"legitimate\": 0, \"phishing\": 1})\n",
     "\n",
-    "# Eliminar la columna del dominio si existe (ajustar el nombre si es diferente)\n",
+    "# Eliminar la columna del dominio si existe\n",
     "if \"url\" in df.columns:\n",
     "    df = df.drop(columns=[\"url\"])\n",
     "\n",
@@ -968,6 +968,27 @@
     "# Evaluar en datos de validación y prueba\n",
     "evaluate_model(model, df_X_val, df_y_val, \"Validación\")\n",
     "evaluate_model(model, df_X_test, df_y_test, \"Prueba\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discusión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. **Impacto de clasificar un sitio legítimo como phishing (FP):**  \n",
+    "Genera pérdida de confianza en el sistema, pérdida de clientes/ingresos, y frustración para los usuarios.\n",
+    "\n",
+    "5. **Impacto de clasificar un sitio de phishing como legítimo (FN):**  \n",
+    "Conduce a riesgos de fraude, robo de datos, compromete la seguridad y afecta la reputación del sistema.\n",
+    "\n",
+    "6. **Métrica más adecuada para comparar modelos de clasificación de phishing:**  \n",
+    "El **Recall** es la métrica más relevante porque prioriza la detección de phishing (minimiza los FN). La **AUC-ROC** puede ser útil para un balance entre precisión y recall."
    ]
   }
  ],
