--- a/Phising_Detection.ipynb
+++ b/Phising_Detection.ipynb
@@ -981,14 +981,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. **Impacto de clasificar un sitio legítimo como phishing (FP):**  \n",
-    "Genera pérdida de confianza en el sistema, pérdida de clientes/ingresos, y frustración para los usuarios.\n",
+    "4. **Impacto de clasificar un sitio legítimo como phishing (Falso Positivo - FP):**  \n",
+    "Cuando un sitio legítimo es clasificado erróneamente como phishing, las consecuencias incluyen la **pérdida de confianza del usuario**, ya que si los usuarios perciben que el sistema está bloqueando sitios confiables, pueden dudar de su fiabilidad. También puede llevar a la **pérdida de clientes o ingresos**, ya que las empresas cuyos sitios sean marcados erróneamente perderán tráfico y ventas. Además, esta situación genera **inconveniencia y frustración** para los usuarios, quienes tendrían que buscar alternativas, afectando negativamente su experiencia de navegación.\n",
     "\n",
-    "5. **Impacto de clasificar un sitio de phishing como legítimo (FN):**  \n",
-    "Conduce a riesgos de fraude, robo de datos, compromete la seguridad y afecta la reputación del sistema.\n",
+    "5. **Impacto de clasificar un sitio de phishing como legítimo (Falso Negativo - FN):**  \n",
+    "El impacto de clasificar un sitio de phishing como legítimo es mucho más grave. Esto puede dar lugar a **fraude y robo de datos**, ya que los usuarios podrían ser engañados para ingresar información confidencial, como credenciales de acceso o datos bancarios. Además, existe el **riesgo de comprometer la seguridad** de los usuarios, lo que podría llevar a ataques de robo de identidad, malware, o incluso phishing bancario. La **pérdida de reputación** es otro resultado crítico, ya que el sistema de detección pierde credibilidad al permitir el acceso a sitios peligrosos.\n",
     "\n",
     "6. **Métrica más adecuada para comparar modelos de clasificación de phishing:**  \n",
-    "El **Recall** es la métrica más relevante porque prioriza la detección de phishing (minimiza los FN). La **AUC-ROC** puede ser útil para un balance entre precisión y recall."
+    "Dado que los **falsos negativos (FN)** tienen un impacto más grave en este contexto, la métrica más relevante para evaluar el rendimiento de los modelos es el **Recall (Sensibilidad)**. Esta métrica mide la capacidad del modelo para identificar correctamente los sitios de phishing y minimizar los **falsos negativos**. Un alto **Recall** es esencial, ya que asegura que la mayoría de los sitios peligrosos sean detectados, lo cual es crucial para proteger a los usuarios. Aunque la **Precisión** también es importante, priorizarla podría llevar a un aumento en los FN, lo que no es deseable en este caso. Como alternativa, la **AUC-ROC** también puede ser útil para comparar modelos, ya que ofrece un balance entre **Precisión** y **Recall**, evaluando el rendimiento del modelo en distintos umbrales de decisión."
    ]
   }
  ],
