--- a/Phising_Detection.ipynb
+++ b/Phising_Detection.ipynb
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1034,12 +1034,7 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, roc_auc_score, confusion_matrix, roc_curve\n",
     "\n",
     "\n",
-    "file_path = \"dataset_limpio.csv\"  \n",
-    "df = pd.read_csv(file_path)\n",
     "\n",
-    "\n",
-    "X = df.drop(columns=['status'])  \n",
-    "y = df['status']  \n",
     "\n",
     "# Dividir los datos en entrenamiento (55%), validación (15%) y prueba (30%)\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.45, random_state=42, stratify=y)\n",
@@ -1096,6 +1091,134 @@
     "# Evaluar en datos de validación y prueba\n",
     "evaluate_model(svm_model, X_val_scaled, y_val, \"Validación\")\n",
     "evaluate_model(svm_model, X_test_scaled, y_test, \"Prueba\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discusión"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. **Impacto de clasificar un sitio legítimo como phishing (Falso Positivo - FP):**  \n",
+    "Cuando un sitio legítimo es clasificado erróneamente como phishing, las consecuencias incluyen la **pérdida de confianza del usuario**, ya que si los usuarios perciben que el sistema está bloqueando sitios confiables, pueden dudar de su fiabilidad. También puede llevar a la **pérdida de clientes o ingresos**, ya que las empresas cuyos sitios sean marcados erróneamente perderán tráfico y ventas. Además, esta situación genera **inconveniencia y frustración** para los usuarios, quienes tendrían que buscar alternativas, afectando negativamente su experiencia de navegación.\n",
+    "\n",
+    "5. **Impacto de clasificar un sitio de phishing como legítimo (Falso Negativo - FN):**  \n",
+    "El impacto de clasificar un sitio de phishing como legítimo es mucho más grave. Esto puede dar lugar a **fraude y robo de datos**, ya que los usuarios podrían ser engañados para ingresar información confidencial, como credenciales de acceso o datos bancarios. Además, existe el **riesgo de comprometer la seguridad** de los usuarios, lo que podría llevar a ataques de robo de identidad, malware, o incluso phishing bancario. La **pérdida de reputación** es otro resultado crítico, ya que el sistema de detección pierde credibilidad al permitir el acceso a sitios peligrosos.\n",
+    "\n",
+    "6. **Métrica más adecuada para comparar modelos de clasificación de phishing:**  \n",
+    "Dado que los **falsos negativos (FN)** tienen un impacto más grave en este contexto, la métrica más relevante para evaluar el rendimiento de los modelos es el **Recall (Sensibilidad)**. Esta métrica mide la capacidad del modelo para identificar correctamente los sitios de phishing y minimizar los **falsos negativos**. Un alto **Recall** es esencial, ya que asegura que la mayoría de los sitios peligrosos sean detectados, lo cual es crucial para proteger a los usuarios. Aunque la **Precisión** también es importante, priorizarla podría llevar a un aumento en los FN, lo que no es deseable en este caso. Como alternativa, la **AUC-ROC** también puede ser útil para comparar modelos, ya que ofrece un balance entre **Precisión** y **Recall**, evaluando el rendimiento del modelo en distintos umbrales de decisión."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7. **¿Qué modelo funcionó mejor para la clasificación de phishing? ¿Por qué?**\n",
+    "El modelo de  **Random Forest** es mejor para la clasificación de phishing porque tiene un AUC más alto (0.89 vs. 0.79 en SVM), lo que indica una mejor capacidad para diferenciar entre sitios legítimos y de phishing. Además, ofrece mayor recall, lo que reduce el riesgo de clasificar erróneamente sitios de phishing como legítimo.Su capacidad para manejar relaciones no lineales y datos ruidosos lo hace más robusto que SVM con un kernel lineal, permitiéndole capturar patrones complejos en las URLs. \n",
+    "\n",
+    "8.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Análisis del Modelo para la Empresa con 50,000 Correos Electrónicos\n",
+      "\n",
+      "1. Datos de Entrada:\n",
+      "- Total de correos electrónicos: 50000\n",
+      "- Porcentaje estimado de phishing: 15.00%\n",
+      "- Correos phishing esperados: 7500\n",
+      "- Correos legítimos esperados: 42500\n",
+      "\n",
+      "2. Resultados del Modelo (Random Forest):\n",
+      "- Falsos positivos estimados: 8846\n",
+      "- Falsos negativos estimados: 1329\n",
+      "- Verdaderos positivos estimados (phishing detectado correctamente): 6171\n",
+      "- Verdaderos negativos estimados (correos legítimos detectados correctamente): 33654\n",
+      "- Total de alarmas generadas: 15017\n",
+      "\n",
+      "3. ¿Funciona el modelo para este caso?\n",
+      "El modelo tiene una precisión real de 0.41, lo que significa que aproximadamente 58.91% de las alarmas serán falsas, generando potencialmente una sobrecarga de alertas para los empleados.\n",
+      "\n",
+      "4. ¿Cómo reducir las falsas alarmas?\n",
+      "- Ajustar el umbral de decisión: Incrementar el umbral de clasificación para reducir falsos positivos a costa de algunos falsos negativos.\n",
+      "- Usar modelos más avanzados: Probar modelos como XGBoost o Redes Neuronales para mejorar la precisión.\n",
+      "- Incorporar análisis contextual: Filtrar correos usando heurísticas adicionales como análisis de contenido, reputación del remitente y frecuencia de envíos sospechosos.\n",
+      "- Implementar aprendizaje activo: Permitir que los empleados marquen correos incorrectamente clasificados para mejorar el modelo con entrenamiento continuo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.45, random_state=42, stratify=y)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.6667, random_state=42, stratify=y_temp)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_val_scaled = scaler.transform(X_val)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_test_pred = rf_model.predict(X_test_scaled)\n",
+    "conf_matrix = confusion_matrix(y_test, y_test_pred)\n",
+    "tn, fp, fn, tp = conf_matrix.ravel()\n",
+    "\n",
+    "\n",
+    "total_emails = 50000\n",
+    "phishing_rate = 0.15\n",
+    "\n",
+    "total_phishing = int(total_emails * phishing_rate)\n",
+    "total_legit = total_emails - total_phishing\n",
+    "\n",
+    "fp_predicted = int((fp / (fp + tn)) * total_legit) \n",
+    "fn_predicted = int((fn / (fn + tp)) * total_phishing)  \n",
+    "\n",
+    "tp_predicted = total_phishing - fn_predicted  \n",
+    "tn_predicted = total_legit - fp_predicted  \n",
+    "\n",
+    "alarmas_generadas = tp_predicted + fp_predicted \n",
+    "\n",
+    "precision_real = tp_predicted / (tp_predicted + fp_predicted)  \n",
+    "\n",
+    "\n",
+    "print(f\"\\nAnálisis del Modelo para la Empresa con 50,000 Correos Electrónicos\\n\")\n",
+    "print(f\"1. Datos de Entrada:\")\n",
+    "print(f\"- Total de correos electrónicos: {total_emails}\")\n",
+    "print(f\"- Porcentaje estimado de phishing: {phishing_rate*100:.2f}%\")\n",
+    "print(f\"- Correos phishing esperados: {total_phishing}\")\n",
+    "print(f\"- Correos legítimos esperados: {total_legit}\\n\")\n",
+    "\n",
+    "print(f\"2. Resultados del Modelo (Random Forest):\")\n",
+    "print(f\"- Falsos positivos estimados: {fp_predicted}\")\n",
+    "print(f\"- Falsos negativos estimados: {fn_predicted}\")\n",
+    "print(f\"- Verdaderos positivos estimados (phishing detectado correctamente): {tp_predicted}\")\n",
+    "print(f\"- Verdaderos negativos estimados (correos legítimos detectados correctamente): {tn_predicted}\")\n",
+    "print(f\"- Total de alarmas generadas: {alarmas_generadas}\\n\")\n",
+    "\n",
+    "print(f\"3. ¿Funciona el modelo para este caso?\")\n",
+    "print(f\"El modelo tiene una precisión real de {precision_real:.2f}, lo que significa que aproximadamente {(1 - precision_real)*100:.2f}% de las alarmas serán falsas, generando potencialmente una sobrecarga de alertas para los empleados.\\n\")\n",
+    "\n",
+    "print(f\"4. ¿Cómo reducir las falsas alarmas?\")\n",
+    "print(\"- Ajustar el umbral de decisión: Incrementar el umbral de clasificación para reducir falsos positivos a costa de algunos falsos negativos.\")\n",
+    "print(\"- Usar modelos más avanzados: Probar modelos como XGBoost o Redes Neuronales para mejorar la precisión.\")\n",
+    "print(\"- Incorporar análisis contextual: Filtrar correos usando heurísticas adicionales como análisis de contenido, reputación del remitente y frecuencia de envíos sospechosos.\")\n",
+    "print(\"- Implementar aprendizaje activo: Permitir que los empleados marquen correos incorrectamente clasificados para mejorar el modelo con entrenamiento continuo.\")\n"
    ]
   }
  ],
